deploy/pegasus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inomo-canrosetta
  labels:
    app.kubernetes.io/part-of: can-rosetta
