deploy/pegasus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: can-rosetta-server
  namespace: inomo-canrosetta
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: can-rosetta-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
